@@ -55,7 +55,7 @@ SCOPE: {
 		'0.0e-10'     => '10e',
 		'0.0e+10'     => '10e',
 		'0.0e100'     => '10e',
-		'1_0e1_0'     => '10e', # Known to fail on 5.6.2
+		'1_0e1_0'     => '10e',
 		'0b'          => 2,
 		'0b0'         => 2,
 		'0b10'        => 2,
